# nickel-sqlite3

./: Cargo.toml  LICENSE  README.md
example/: example.rs
example/assets/: template.tpl  test.db
src/: lib.rs  middleware.rs
